--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.9'
 services:
   db:
     image: postgres:16
@@ -38,6 +37,18 @@ services:
       - "3000:3000"
     depends_on:
       - backend
+
+  nginx:
+    image: nginx:stable-alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./backend/staticfiles:/var/static
+      - ./frontend/build:/var/www/html
+    depends_on:
+      - backend
+      - frontend
 
 volumes:
   postgres_data:
